@@ -1,0 +1,23 @@
+[tox]
+minversion=2.3.1
+envlist = py36,py37,py38,py39,py310,black
+isolated_build = True
+
+[testenv]
+deps =
+    black == 22.3.0
+    pytest
+commands =
+    pytest tests/
+
+[testenv:black]
+commands =
+    black --check .
+
+[gh-actions]
+python =
+    3.6: py36
+    3.7: py37
+    3.8: py38
+    3.9: py39, black
+    3.10: py310
